Minor fixes
- There was a leftover bug where the saturation for the status bar wasn’t 100% with Focus Mode disabled
- Settings package list items now have a little bit of footroom
- Form styles have been moved from the custom nebula stylesheet to their own new stylesheet
- Form styles have better dropdowns and checkboxes
- The configuration button now aligns with the theme dropdown
- Fixed a small misalignment with icons within buttons
- Smoothed a jumpy transition when re-focusing input fields that already had text in them
- Moved some cursor styles to the ui theme from the syntax theme. Dunno what they were doing there. They’ve been rounded up, and they’re doing well in their new home.

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -32,6 +32,11 @@
 	&:focus:active {
 		outline: none;
 	}
+	&.icon {
+		&::before {
+			top: 2px;
+		}
+	}
 }
 // Colored buttons -----------------------
 
