--- a/styles/editor.less
+++ b/styles/editor.less
@@ -2,12 +2,20 @@
 // -------------------
 // Mini Editors are the "text inputs" used in find+replace or in the settings.
 
+atom-text-editor {
+	.cursor {
+		border-width: 2px;
+		transition: opacity 0.2s ease;
+		// rest of .cursor is in nebula-syntax
+	}
+}
+
 atom-text-editor[mini] {
 	padding-left: @component-padding/2;
 	color: @text-color;
 	background-color: transparent;
 	border-bottom: 1px solid lighten(@base-background-color, 5%);
-	.transition(border-color;);
+	.transition(border-color, opacity;);
 
 	&.is-focused {
 		border-bottom-color: @text-color-info;
