--- a/styles/nebula.less
+++ b/styles/nebula.less
@@ -13,105 +13,6 @@ ul.background-message {
 		}
 	}
 }
-
-
-// Form Elements
-// -------------------
-// Used to style selects and various form elements
-
-.input-label,
-.settings-view .input-label {
-	cursor: pointer;
-}
-
-.settings-view input[type="radio"],
-input[type="radio"] {
-	background-color: @background-color-highlight;
-	cursor: pointer;
-
-	&:checked,
-	&:hover {
-		background-color: lighten(@background-color-highlight, 5%);
-	}
-
-	&:checked {
-		background-color: @blue;
-	}
-
-	&:active {
-		background-color: lighten(@background-color-highlight, 15%);
-	}
-}
-
-.settings-view input[type="checkbox"],
-input[type="checkbox"] {
-	background-color: @background-color-highlight;
-	cursor: pointer;
-
-	&:checked,
-	&:hover {
-		background-color: lighten(@background-color-highlight, 5%);
-	}
-
-	&:active,
-	&:checked:active {
-		background-color: lighten(@background-color-highlight, 15%);
-	}
-
-	&:after,
-	&:before {
-		background-color: @blue;
-	}
-}
-
-select,
-select.form-control {
-	-webkit-appearance: none;
-    background-image: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><path fill='#fff' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>");
-    background-position: 99% 50%;
-    background-repeat: no-repeat;
-}
-
-// .select-container,
-// .settings-view .select-container {
-// 	position: relative;
-//
-// 	&:after {
-// 		content: "\f0a3";
-// 		font-family: 'Octicons Regular';
-// 		font-weight: normal;
-// 		font-style: normal;
-// 		display: block;
-// 		position: absolute;
-// 		right: 8px;
-// 		top: 50%;
-// 		margin-top: -8px;
-// 		line-height: 1;
-// 		-webkit-font-smoothing: antialiased;
-// 		text-decoration: none;
-// 		font-size: 16px;
-// 		width: 16px;
-// 		height: 16px;
-// 	}
-//
-// 	select {
-// 		-webkit-appearance: none;
-// 	}
-// }
-
-.settings-view select,
-select {
-	padding: 7px 10px;
-	cursor: pointer;
-	background-color: @button-background-color;
-	border: 1px solid @button-border-color;
-	border-radius: @component-border-radius;
-	.transition(color, border, box-shadow, background-color, opacity;);
-
-	&:focus,
-	&:hover {
-		color: @text-color-highlight;
-		background-color: @button-background-color-hover;
-		border-color: @blue;
-	}
+.badge {
+	border-radius: 0.2em;
 }
