--- a/styles/settings.less
+++ b/styles/settings.less
@@ -92,6 +92,7 @@
 	.package-container {
 		.row {
 			border-bottom: 1px solid @base-border-color;
+			margin: 10px 0;
 		}
 	}
 }
